--- a/.github/workflows/release.yml.template
+++ b/.github/workflows/release.yml.template
@@ -25,6 +25,6 @@ jobs:
 
     uses: kubewarden/github-actions/.github/workflows/reusable-release-policy-go.yml@v1
     with:
-      oci-target: #FIXME: change to something like ghcr.io/${{ github.repository_owner }}/policies/safe-labels
+      oci-target: ghcr.io/atoy3731/kubewarden-policies/istio
     secrets:
       workflow-pat: ${{ secrets.WORKFLOW_PAT }}
