--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,11 +10,10 @@ name: Release policy
 jobs:
   test:
     name: run tests and linters
-    uses: kubewarden/github-actions/.github/workflows/reusable-test-policy-go.yml@v1
+    uses: atoy3731/github-actions/.github/workflows/reusable-test-policy-go.yml@v1
 
   release:
     needs: test
-    runs-on: ubuntu-latest
     permissions:
       # Required to create GH releases
       contents: write
@@ -22,20 +21,9 @@ jobs:
       packages: write
       # Required by cosign keyless signing
       id-token: write
-    steps:
-      -
-        name: Install dependencies
-        uses: kubewarden/github-actions/policy-gh-action-dependencies@v1
-      -
-        name: Build and annotate policy
-        uses: kubewarden/github-actions/policy-build-go@v1
-      -
-        name: Run e2e tests
-        run: |
-          make e2e-tests
-      -
-        name: Release
-        uses: kubewarden/github-actions/policy-release@v1
-        with:
-          oci-target: ghcr.io/atoy3731/kubewarden-policies/istio
-          tinygo-version: 0.20.0
+
+    uses: atoy3731/github-actions/.github/workflows/reusable-release-policy-go.yml@v1
+    with:
+      oci-target: ghcr.io/atoy3731/kubewarden-policies/istio
+    secrets:
+      workflow-pat: ${{ secrets.WORKFLOW_PAT }}
