--- a/actions/policy-release/action.yaml
+++ b/actions/policy-release/action.yaml
@@ -9,15 +9,15 @@ inputs:
     required: false
     default: annotated-policy.wasm
   oci-target:
+    description: "oci target"
     required: true
-    type: string
   workflow-pat:
+    description: "PAT for workflow"
     required: false
-    type: string
     default: ""
   GITHUB_TOKEN:
+    description: "github-token"
     required: true
-    type: string
 runs:
   using: "composite"
   steps:
@@ -33,7 +33,7 @@ runs:
       shell: bash
       if: ${{ startsWith(github.ref, 'refs/heads/') }}
       env:
-        COSIGN_EXPERIMENTAL: 1
+        COSIGN_EXPERIMENTAL: "1"
       run: |
         set -ex
         echo Pushing policy to OCI container registry
@@ -46,7 +46,7 @@ runs:
       shell: bash
       if: ${{ startsWith(github.ref, 'refs/tags/') }}
       env:
-        COSIGN_EXPERIMENTAL: 1
+        COSIGN_EXPERIMENTAL: "1"
       run: |
         set -ex
         export OCI_TAG=$(echo $GITHUB_REF | sed -e "s|refs/tags/||")
