--- a/.github/workflows/release-policy.yml
+++ b/.github/workflows/release-policy.yml
@@ -17,17 +17,17 @@ jobs:
     steps:
       -
         name: Install dependencies
-        uses: actions/policy-gh-action-dependencies@main
+        uses: ./actions/policy-gh-action-dependencies
       -
         name: Build and annotate policy
-        uses: actions/policy-build-go@main
+        uses: ./actions/policy-build-go
       -
         name: Run e2e tests
         run: |
           make e2e-tests
       -
         name: Release
-        uses: actions/policy-release@main
+        uses: ./actions/policy-release
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           oci-target: ${{ inputs.oci-target }}
